# bili-tool

./: .gitignore  README.md  pyproject.toml
docs/: README.md
src/: main.py
src/core/: blivedm_handler.py  blivedm_signal.py  emoji_handler.py  video_handler.py
src/utils/: config_loader.py  sovits_http_helper.py
src/widgets/: animated_image_widget.py  blivedm_widget.py  bulletscreen_player.py  bulletscreen_widget.py  emoji_selecter.py  movable_label.py  setting_page.py  setting_page_vibe_c.py  system_tray.py  video_card_widget.py  video_download_widget.py
